<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014, barter.li
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">barter.li</string>
    <string name="receiver_network">Network Change Receiver</string>
    <string name="action_settings">Settings</string>
    <string name="service_chat">Chat Service</string>

    <!-- menu strings -->
    <string name="signup">Sign Up</string>
    <string name="build_library">Build Library</string>
    <string name="search">Search Books</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome_fb">Welcome %s!</string>
    <string name="welcome_to_barterli">Welcome to barter.li!</string>
    <string name="location_pref_set">We have remembered your preferred location.</string>
    <string name="profile">Profile</string>
    <string name="library">My Books</string>
    <string name="scan_book">Scan Book</string>
    <string name="add_book">Add Book</string>
    <string name="add_manually">Add Book Manually</string>
    <string name="no_network_connection">No network connection!</string>
    <string name="toggle_map">Toggle Map</string>
    <string name="tap_to_set_preferred_location">Tap to set me as your preferred location.</string>
    <string name="location_format" formatted="false">\@%s, %s</string>
    <string name="send">Send</string>
    <string name="app_id">458716080895923</string>
    <string name="enter_message">Enter your message</string>
    <string name="new_messages">%d new messages!</string>
    <string name="chat_opened_from" formatted="false">This chat was opened from %s.</string>

    <!-- Strings for AddBookActivity -->
    <string name="search_hint">Search by Title|Author|ISBN</string>
    <string name="search_by_author_hint">Search by Author</string>
    <string name="scan_barcode_button_label">Scan ISBN BarCode</string>
    <string name="add_new_book_label">Manual Entry</string>
    <string name="search_for_books">Search for books</string>

    <!-- Strings for EditBookDetailsActivity -->
    <string name="isbn_label">ISBN Number</string>
    <string name="title_label">Book Title</string>
    <string name="author_label">Author</string>
    <string name="description_label">Description</string>
    <string name="publication_year_label">Publication Year</string>
    <string name="publication_month_label">Publication Month</string>
    <string name="publication_date_label">Publication</string>
    <string name="barter_type_label">Barter Type</string>
    <string name="error_enter_title">Enter a book title</string>
    <string name="book_added">Book has been added!</string>
    <string name="select_a_barter_type">Select at least one barter type to add the book</string>
    <string name="unable_to_fetch_book_info">Unable to fetch book info.</string>
    <string name="not_a_valid_isbn">Not a valid ISBN.</string>
    <string name="unable_to_fetch_books">Unable to fetch books.</string>
    <string name="unable_to_fetch_hangouts">Unable to fetch hangouts.</string>
    <string name="error_enter_email">Please enter your email address.</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="error_enter_password">Please enter a password.</string>
    <string name="error_password_minimum_length">Password must be at least %d characters long.</string>
    <string name="error_unable_to_login">Unable to login.</string>
    <string name="error_unable_to_set_preferred_location">Unable to set preferred location for user.</string>
    <string name="error_not_connected_to_chat_service">Not connected to chat service.</string>
    <string name="error_unable_to_send_chat">Not able to send chat message</string>
    <string name="no_personal_info">Please don\'t include any personally identifiable information(email, name, phone number, address, etc) as this bug report will be available publicly.</string>

    <!-- Barter Type Options -->
    <string name="give_away">Give Away</string>
    <string name="barter">Barter</string>
    <string name="sell">Sell</string>
    <string name="read">Read</string>
    <string name="wishlist">Wishlist</string>
    <string name="keep_private">Keep Private</string>
    <string name="submit">Submit</string>
    <string name="chat_with_owner">Chat with owner</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="email_label">Email Id</string>
    <string name="password_label">Password</string>

    <!-- Strings for TakeLatLongActivity -->
    <string name="lat_long">Location</string>
    <string name="select_preferred_location_hint">Select your preferred Meeting Location</string>

    <!-- Strings for Nav drawer -->
    <string-array name="nav_drawer_titles">
        <item>My Profile</item>
        <item>Chats</item>
        <item>Suggest Feature</item>
        <item>Report Bug</item>
        <item>Collaborate with barter.li</item>
        <item>Open Source</item>
        <item>About us</item>
        <item>Tribute</item>
        <item>Team</item>
    </string-array>
    <string-array name="nav_drawer_descriptions">
        <item>Check out your profile, update your info, view your saved books.</item>
        <item>Your ongoing chats</item>
        <item>Got an idea? Let us Know.</item>
        <item>Got a bug? Tell us about it.</item>
        <item>Let us work together.</item>
        <item>No open source licences were violated in the making of this app.</item>
        <item>What is barter.li? Who\'s behind it?</item>
        <item>The inspiration for barter.li.</item>
        <item>The team behind barter.li.</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>Decenber</item>
    </string-array>

    <!-- String Related to Profile -->
    <string name="local_profile_image">barterli_avatar_small.png</string>
    <string name="image_profile_pic_description">Profile Picture</string>
    <string name="text_default_profile_name">Profile Name</string>
    <string name="text_profile_description">Short information about you.</string>
    <string name="button_edit_preferred_location">Edit Preferred Location</string>
    <string name="text_default_current_location">Set your preferred Location</string>
    <string name="label_about_me">About Me</string>
    <string name="label_current_location">Preferred Location</string>
    <string name="text_edit_profile">Edit</string>
    <string name="text_save_profile">Save</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="label_my_books">My Books</string>

    <!-- Strings/URLs related to ShowWebViewFragment -->
    <string name="url_google">http://www.google.com</string>
    <string name="url_me">http://barter.li</string>

    <!-- String Related to Report Bug -->
    <string name="text_report_bug">Report Bug</string>
    <string name="button_submit">Submit</string>
    <string name="text_bug_title">Barter.Li/Reported Bug</string>
    <string name="hint_report_bug">Enter Your Findings Here.</string>

    <!-- String Related to Suggest Feature -->
    <string name="text_suggest_feature">Suggest a Feature</string>
    <string name="text_suggest_feature_title">Barter.Li/Suggest Feature</string>
    <string name="hint_suggest_feature">Enter Your Thoughts Here.</string>

    <!-- String Related to Collaborate Page -->
    <string name="text_collaborate">I am interested to partner in the role of</string>
    <string name="sponsor">Sponsor</string>
    <string name="designer">Designer</string>
    <string name="developer">Developer</string>
    <string name="campus_ambassador">Campus Ambassador</string>
    <string name="volunteer">Volunteer</string>
    <string name="barterli_email">joinus@barter.li</string>
    <string name="hint_about_me_description">About Me.</string>

    <!-- String Related to Show Single Book Fragment -->


    <!-- Strings related to open source licenses -->
    <string-array name="oss_titles">
        <item>Facebook Android SDK, Licensed under the Apache v2.0 License\nhttps://github.com/facebook/facebook-android-sdk</item>
        <item>enhanced-volley, A networking toolkit based on Volley, from the Android Open Source Project. Licenced under the Apache v2.0 License.\nhttps://github.com/vinaysshenoy/enhanced-volley</item>
        <item>android-quick-response-code, A library for scanning barcodes. Licensed under the Apache v2.0 License.\nhttps://github.com/phishman3579/android-quick-response-code</item>
        <item>NineOldAndroids, A backport of the Android 3.0 Animation API. Licensed under the Apache v2.0 License.\nhttps://github.com/JakeWharton/NineOldAndroids/</item>
        <item>ListViewAnimations, A library to easily add animations to List Items. Licensed under the Apache v2.0 License.\nhttps://github.com/nhaarman/ListViewAnimations</item>
        <item>Crouton, Context sensitive notifications for Android. Licensed under the Apache v2.0 License.\nhttps://github.com/keyboardsurfer/Crouton</item>
    </string-array>
    
    <!-- String Related to Password Reset -->
    <string name="reset_password_email_text">Email To Send Reset Token</string>
    <string name="rest_password_email_hint">Email</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="reset_password_new_hint">New Password</string>
    <string name="reset_password_token_hint">Token</string>
    <string name="send_reset_token">Send Token</string>
    <string name="set_password_reset">Reset Password</string>
    
   
</resources>