<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
>
   <TextView
    android:id="@+id/password_reset_message"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:capitalize="characters"
	/>
	
	<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:capitalize="characters"
	android:text="@string/reset_password_email_text" />
	
	<EditText android:id="@+id/reset_password_email"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:hint="@string/rest_password_email_hint"
	/>
	
    <Button android:id="@+id/send_reset_token_button"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/send_reset_token"
     />
	
	<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:capitalize="characters"
	android:text="@string/reset_password_text" />
	
	<EditText android:id="@+id/reset_password_new"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:hint="@string/reset_password_new_hint"
	/>
	
	<EditText android:id="@+id/reset_password_token"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:hint="@string/reset_password_token_hint"
	/>
	 
	<Button android:id="@+id/set_password_reset_button"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/set_password_reset"
     />
	
</LinearLayout>